# flow_solver

./: .gitignore  .gitmodules  ArchitectureOverview.md  CMakeLists.txt  Makefile  README.md  login.sh  run-tests.sh
doc/: ArchitectureOverview.md
docker/: Dockerfile  Dockerfile.backup  README.md  build-in-docker.sh  docker-build.sh  docker-cleanup.sh  docker-compose.yml  docker-compose.yml.backup  docker-enter.sh  docker-rebuild.sh
intro/: first_single_program.cpp  input.txt  test
ml/: data_loader.py  hyperparameters.py  main.py  normalizer.py  plotting.py  readme.md  reporter.py  requirements.txt  tester.py  trainer.py
ml/networks/: B.py  ReferenceCNN.py  __init__.py  base_model.py
ml/notebooks/: 0_model_train_test.ipynb  1_model_single_learn_test.ipynb  5_train_bi_input_model.ipynb
ml/submissions/: generate-submission.ipynb
scaling/: profile_scaling.sh
simulation/: .gitignore  CMakeLists.txt  README.md
simulation/parameters/: parameters-4.txt  parameters-5.txt
simulation/scaling/: scaling_results_s4.csv  scaling_results_s5.csv
simulation/src/: main.cpp
simulation/tests/: test_discretization.cpp
src/: CMakeLists.txt  main.cpp  simulation.cpp  simulation.h
src/communication/: CMakeLists.txt  exchanger.cpp  exchanger.h
src/discretization/: CMakeLists.txt  central_differences.cpp  central_differences.h  discretization.cpp  discretization.h  donor_cell.cpp  donor_cell.h
src/output_writer/: CMakeLists.txt  output_writer.cpp  output_writer.h  (+10 more)
test/: test.txt
tests/: Makefile  test_data_exchanger.cpp  test_field_variable.cpp
(+60 files in other folders)
